# rust-resume

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
bench/: Dockerfile  bench.sh  bench_all.sh  correctness.sh  docker_bench.sh  gen_load.sh  run_docker_bench.sh
benches/: filter.rs
docs/: index.html  install.sh  integrations.html  matugen-template.toml  television-channel.toml  theme.html
src/: adapter.rs  cli.rs  config.rs  index.rs  lib.rs  main.rs  query.rs  search.rs  session.rs  update.rs
src/adapters/: claude.rs  copilot.rs  kimi.rs  mod.rs
src/tui/: app.rs  icons.rs  keybindings.rs  mod.rs  preview.rs  results_list.rs  utils.rs
tests/: adapters.rs  index_search.rs
