[package]
name = "rust-resume"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fr-rs"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tantivy = "0.25.0"
regex = "1.12.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
