[package]
name = "rust-resume"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fr-rs"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tantivy = "0.25.0"
regex = "1.12.3"
ratatui = "0.30.0"
crossterm = "0.29.0"
unicode-width = "0.2.2"
rusqlite = { version = "0.38", features = ["bundled"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25.9"
toml = "1"
tui-scrollbar = { version = "0.2.2", features = ["crossterm_0_29"] }

[features]
default = []
chafa = ["ratatui-image/chafa-dyn"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
