[package]
name = "agents-sesame"
version = "0.1.1"
edition = "2024"
description = "Fast fuzzy finder TUI for coding agent session history"
license = "MIT"
repository = "https://github.com/rucnyz/agents-sesame"
keywords = ["cli", "tui", "agent", "session", "search"]
categories = ["command-line-utilities"]

[[bin]]
name = "ase"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tantivy = { version = "0.25.0", default-features = false, features = ["mmap", "stopwords", "lz4-compression"] }
regex = "1.12.3"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"
unicode-width = "0.2.2"
rusqlite = { version = "0.38", features = ["bundled"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
toml = "1"
tui-scrollbar = { version = "0.2.2", features = ["crossterm_0_29"] }
clap_complete = "4.5.66"
clap_complete_nushell = "4.5.10"
jieba-rs = "0.8.1"

[features]
default = []
chafa = ["ratatui-image/chafa-dyn"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
